# test_techmaster

./: README.md
01/: README.md  pubspec.yaml
01/lib/: chessboard.dart  main.dart
02/: README.md  pubspec.yaml
02/android/app/src/main/kotlin/com/example/test_02/: MainActivity.kt
02/lib/: main.dart  solve_queen.dart
03/: README.md  pubspec.yaml
03/android/app/: build.gradle
03/android/app/src/main/: AndroidManifest.xml
03/android/app/src/main/cpp/: CMakeLists.txt  eight_queens.c
03/lib/: ffi_queens.dart  main.dart  widget_board.dart
03/windows/runner/: Runner.rc
04/: README.md  pubspec.yaml
04/android/app/: build.gradle
04/android/app/src/main/: AndroidManifest.xml
04/android/app/src/main/cpp/: CMakeLists.txt  selection_sort.c
04/ios/Runner/: Info.plist
04/ios/Runner.xcodeproj/: project.pbxproj
04/lib/: main.dart  selection_sort_ffi.dart  widget_sort.dart
04/linux/: CMakeLists.txt
04/linux/runner/: my_application.cc
04/macos/Runner.xcodeproj/: project.pbxproj
04/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
04/macos/Runner/Configs/: AppInfo.xcconfig
04/test/: widget_test.dart
04/web/: index.html  manifest.json
04/windows/: CMakeLists.txt
04/windows/runner/: Runner.rc  main.cpp
05/: README.md  pubspec.yaml
05/android/app/: build.gradle
05/android/app/src/main/: AndroidManifest.xml
05/lib/: main.dart
05/test/: widget_test.dart
05/web/: index.html  manifest.json
05/windows/: CMakeLists.txt
05/windows/runner/: Runner.rc  main.cpp
(+3 files in other folders)
